# hivebot

./: .gitignore  README.md
src/hivebot_trolley/: CMakeLists.txt  package.xml
src/hivebot_trolley/config/: joint_names_hivebot_trolley.yaml
src/hivebot_trolley/launch/: display.launch  gazebo.launch
src/hivebot_trolley/meshes/: back_wheel_1.STL  back_wheel_2.STL  back_wheel_holder_1.STL  back_wheel_holder_2.STL  base_link.STL  compartment-1.STL  compartment-2.STL  cover-door.STL  door-1.STL  door-2.STL  front_wheel_1.STL  front_wheel_2.STL  front_wheel_holder_1.STL  front_wheel_holder_2.STL  front_wheel_mount_plate_1.STL  front_wheel_mount_plate_2.STL  guiding_frame-2.STL  handle.STL  mount-box.STL  surrounding-frame.STL  tablet.STL  tools.STL
src/hivebot_trolley/urdf/: hivebot_trolley.csv  (+3 more)
src/hivebotics_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/mycobot_320/: CMakeLists.txt  package.xml
src/mycobot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/mycobot_pro/: CMakeLists.txt  package.xml
src/toilet_trolley_arm_description/: CMakeLists.txt  package.xml
src/toilet_urdf/: CMakeLists.txt  package.xml
src/trolley_arm_description/: CMakeLists.txt  package.xml
src/trolley_urdf/: CMakeLists.txt  package.xml
src/trolley_urdf/config/: joint_names_trolley_urdf_7.yaml
src/trolley_urdf/launch/: display.launch  gazebo.launch
src/trolley_urdf/meshes/: base_link.STL  box_link.STL  frame_link.STL  handle_link.STL  wheel_1.STL  wheel_2.STL  wheel_3.STL
src/trolley_urdf/urdf/: trolley_urdf_7.csv  trolley_urdf_7.xacro
(+88 files in other folders)
