<package format="2">
  <name>trolley_urdf</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for trolley_urdf</p>
    <p>This package contains configuration data, 3D models and launch files
for trolley_urdf robot</p>
  </description>
  <author>Rishab Patwari</author>
  <maintainer email="rishab@checked.page" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>